@@ -4841,4 +4841,8 @@
     bbb
     aaa 
 
+/()()a+/O=
+    aaa\D
+    a\D
+
 /-- End of testinput8 --/
