@@ -15,6 +15,8 @@ Version 8.40 17-June-2016
 
 3.  Fix register overwite in JIT when SSE2 acceleration is enabled.
 
+4.  Ignore "show all captures" (/=) for DFA matching.
+
 
 Version 8.39 14-June-2016
 -------------------------
